Temporary fixes for small errors